2005-11-06  Zoltan Varga  <vargaz@freemail.hu>

	* SearchOption.cs: New file.

2005-10-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StreamReader.cs: made ReadLine() less memory-hungry. Fixes bug #76399.

2005-10-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoIO.cs: replace FindFirst/FindNext/FindClose with
	GetFileSystemEntries.
	* Directory.cs: simplify GetFileSystemEntries by using the new icall.

2005-10-01  Ben Maurer  <bmaurer@ximian.com>

	* BinaryReader.cs: The patch below had a nasty little bug with
	long strings that had non-ascii chars in it, because it was
	looking at the char count, not the byte count.

2005-09-11  Ben Maurer  <bmaurer@ximian.com>

	* BinaryReader.cs: An optimization for ReadString that had been
	approved/well tested for a while but never gotten in. Bug #52754.

2005-09-05  Miguel de Icaza  <miguel@novell.com>

	* MonoIOError.cs: expose the ERROR_DIR_NOT_EMPTY as we are
	throwing it. 

	* MonoIO.cs: Return a properly named error.

2005-08-23  Raja R Harinath  <rharinath@novell.com>

	Fix #75679.
	* StreamReader.cs (DiscardBufferedData): Reset the decoder too.

2005-07-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BinaryReader.cs: use Buffer.BlockCopy instead of Array.Copy when
	expanding the buffer.

2005-07-24 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Directory.cs: don't leak 'find' handles.

2005-07-05  Dick Porter  <dick@ximian.com>

	* MonoIO.cs:
	* MonoIOError.cs: Add error message for ERROR_WRITE_FAULT.

2005-07-04  Sebastien Pouliot  <sebastien@ximian.com>

	* DirectoryInfo.cs: Fixed recursion problem with root directory 
	introduced when fixing bug #75443.

2005-07-02  Sebastien Pouliot  <sebastien@ximian.com>

	* FileSystemInfo.cs: Fixed exception arguments. Added ComVisible for
	NET_2_0.
	* DirectoryInfo.cs: Fixed bug #75443 when the directory ends with a
	separator. Added ComVisible for NET_2_0. Normalized line endings.

2005-05-26  Miguel de Icaza  <miguel@novell.com>
